--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,271 @@
-.App {
-  text-align: center;
+:root {
+  --clr-primary: #002555;
+  --clr-secondary: #C0392B;
+  --clr-tertiary: #F1C40F;
+  --clr-dark-gray: #BABCC2;
+  --clr-light-gray: #CDCDCD;
+  --clr-background: #F2F2F2;
+  --clr-button-hover: #E6E6E6;
+  --clr-font: #131313;
+  --clr-screen: #1A1A1A;
+  --clr-active: #53FF5C;
+  
+  --clr-twitter: #1DA1F2;
+  --clr-whatsapp: #25D366;
+  --clr-github: #333333;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.background {
+  background-color: var(--clr-background);
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.mesa-bg {
+  margin-top: -15px;
+}
+
+.mesa {
+  margin-top: -450px;
+  height: 400px;
+  /*width: 800px;*/
+  display: flex;
+  flex-direction: row;
+}
+
+.left-side {
+  width: 450px;
+  display: flex;
+  flex-direction: column;
+}
+
+.header {
+  line-height: 54px;
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+}
+
+.title {
+  color: var(--clr-primary);
+  font-size: 54px;
+}
+
+.version {
+  color: var(--clr-secondary);
+  font-size: 16px;
+  font-style: italic;
+  margin-left: 10px;
+}
+
+.actions {
+  height: 300px;
+  margin-top: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.group {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.button {
+  background-color: var(--clr-background);
+  height: 45px;
+  width: 45px;
+  border-radius: 2px;
+  margin-bottom: 10px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  font-size: 20px;
+  line-height: 45px;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+  transition: all ease 0.2s;
 }
 
-.App-link {
-  color: #61dafb;
+.button:hover {
+  background-color: var(--clr-button-hover);
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.active {
+  background-color: var(--clr-active);
+  height: 45px;
+  width: 45px;
+  border-radius: 2px;
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  line-height: 45px;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+  transition: all ease 0.2s;
+}
+
+.label {
+  background-color: var(--clr-background);
+  height: 20px;
+  width: 60px;
+  border-radius: 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 10px;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+}
+
+.line {
+  background: var(--clr-primary);
+  height: 2px;
+  margin-top: 15px;
+}
+
+.right-side {
+  /*border: 1px solid red;*/
+  width: 300px;
+  margin-top: 10px;
+  margin-left: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.screen {
+  background-color: var(--clr-screen);
+  color: var(--clr-tertiary);
+  line-height: 30px;
+  height: 90px;
+  width: 240px;
+  padding: 20px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+}
+
+.song, .type {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.bgm {
+  /*border: 1px solid red;*/
+  width: 192px;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.options {
+  margin-top: 50px;
+  height: 110px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.fake-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.stop, .play {
+  background-color: var(--clr-background);
+  height: 45px;
+  width: 80px;
+  border-radius: 2px;
+  margin: 0 9px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  line-height: 45px;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+}
+
+.rec {
+  background-color: var(--clr-background);
+  color: var(--clr-secondary);
+  height: 45px;
+  width: 45px;
+  border-radius: 2px;
+  margin: 0 9px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  line-height: 45px;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+}
+
+.share-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.share-buttons a {
+  color: var(--clr-font);
+  text-decoration: none;
+  transition: all ease 0.2s;
+}
+
+.twitter, .whatsapp, .github {
+  background-color: var(--clr-background);
+  height: 45px;
+  width: 45px;
+  border-radius: 2px;
+  margin: 0 9px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  line-height: 45px;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+  transition: all ease 0.2s;
+}
+
+.twitter:hover {
+  background-color: var(--clr-button-hover);
+  color: var(--clr-twitter);
+  cursor: pointer;
+}
+
+.whatsapp:hover {
+  background-color: var(--clr-button-hover);
+  color: var(--clr-whatsapp);
+  cursor: pointer;
+}
+
+.github:hover {
+  background-color: var(--clr-button-hover);
+  color: var(--clr-github);
+  cursor: pointer;
+}
+
+.footer {
+  color: var(--clr-font);
+  position: absolute;
+  bottom: 10px;
+}
+.footer a {
+  font-weight: 500;
+  text-decoration: none;
 }
